--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,13 +12,13 @@ authors = [
 ]
 
 [tool.poetry.dependencies]
-python = "^3.9"
+python = "^3.8"
 django = "^3.1.7"
 djangorestframework = "^3.12.2"
 pendulum = "^2.1.2"
 python-dotenv = "^0.15.0"
 loguru = "^0.5.3"
-psycopg2 = "^2.8.6"
+psycopg2-binary = "^2.8.6"
 
 [tool.poetry.dev-dependencies]
 black = "^20.8b1"
