--- a/config/example.env
+++ b/config/example.env
@@ -6,3 +6,8 @@ DB_USER = "postgres"
 DB_PASSWORD = "postgres"
 DB_HOST = "127.0.0.1"
 DB_PORT = 5432
+
+ALLOWED_HOSTS = 127.0.0.1 localhost
+
+CORS_ALLOWED_ORIGINS = https://127.0.0.1:3000 https://localhost:3000
+CORS_ALLOW_ALL_ORIGINS = "True"
