--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ loguru = "^0.5.3"
 psycopg2-binary = "^2.8.6"
 deepdiff = "^5.2.3"
 pytest-django = "^4.1.0"
+django-cors-headers = "^3.7.0"
 
 [tool.poetry.dev-dependencies]
 black = "^20.8b1"
