--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ psycopg2-binary = "^2.8.6"
 deepdiff = "^5.2.3"
 pytest-django = "^4.1.0"
 django-cors-headers = "^3.7.0"
+pytest = "^6.2.2"
 
 [tool.poetry.dev-dependencies]
 black = "^20.8b1"
