--- a/pytest.ini
+++ b/pytest.ini
@@ -1,2 +1,4 @@
 [pytest]
 DJANGO_SETTINGS_MODULE = eve.settings
+EVE_CONFIG = C:\Users\jirka\OneDrive\Desktop\swi\example.env
+python_files = tests.py test_*.py *_tests.py
