--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ deepdiff = "^5.2.3"
 pytest-django = "^4.1.0"
 django-cors-headers = "^3.7.0"
 pytest = "^6.2.2"
+drf-spectacular = "^0.15.1"
 
 [tool.poetry.dev-dependencies]
 black = "^20.8b1"
