--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ deepdiff==5.2.3
 django-cors-headers==3.7.0
 django==3.1.7
 djangorestframework==3.12.4
+drf-spectacular==0.15.1
 gunicorn==20.1.0
 iniconfig==1.1.1
 loguru==0.5.3
